--- a/app/src/main/res/layout/activity_insert_book.xml
+++ b/app/src/main/res/layout/activity_insert_book.xml
@@ -1,69 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/insert_book"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:padding="16dp">
+    tools:context=".InsertBookActivity">
 
-    <EditText
-        android:id="@+id/editTextTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:autofillHints="Title"
-        android:hint="@string/title"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
+    <include
+        android:id="@+id/toolbar_layout"
+        layout="@layout/toolbar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="8dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
-        android:id="@+id/editTextAuthor"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:autofillHints="Author"
-        android:hint="@string/author"
-        android:inputType="text"
+        android:layout_height="0dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="8dp"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editTextReturnDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:autofillHints="Return Date"
-        android:hint="@string/return_date"
-        android:focusable="false"
-        android:clickable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextAuthor"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="8dp"/>
+        <EditText
+            android:id="@+id/editTextTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="Title"
+            android:hint="@string/title"
+            android:inputType="text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="8dp"/>
 
-    <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_save"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextReturnDate"
-        app:layout_constraintEnd_toStartOf="@id/buttonCancel"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        android:layout_marginEnd="8dp"
-        android:padding="8dp"/>
+        <EditText
+            android:id="@+id/editTextAuthor"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="Author"
+            android:hint="@string/author"
+            android:inputType="text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editTextTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="8dp"/>
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_cancel"
-        app:layout_constraintTop_toBottomOf="@id/editTextReturnDate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/buttonSave"
-        android:layout_marginStart="8dp"
-        android:padding="8dp"/>
+        <EditText
+            android:id="@+id/editTextReturnDate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="Return Date"
+            android:hint="@string/return_date"
+            android:focusable="false"
+            android:clickable="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editTextAuthor"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="8dp"/>
+
+        <Button
+            android:id="@+id/buttonSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_save"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editTextReturnDate"
+            app:layout_constraintEnd_toStartOf="@id/buttonCancel"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginEnd="8dp"
+            android:padding="8dp"/>
+
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_cancel"
+            app:layout_constraintTop_toBottomOf="@id/editTextReturnDate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/buttonSave"
+            android:layout_marginStart="8dp"
+            android:padding="8dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
