--- a/app/src/main/res/layout/activity_insert_book.xml
+++ b/app/src/main/res/layout/activity_insert_book.xml
@@ -24,29 +24,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:padding="16dp">
 
-        <EditText
-            android:id="@+id/editTextTitle"
+        <TextView
+            android:id="@+id/textViewTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:autofillHints="Title"
             android:hint="@string/title"
-            android:inputType="text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:textSize="16sp"/>
 
-        <EditText
-            android:id="@+id/editTextAuthor"
+        <TextView
+            android:id="@+id/textViewAuthor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:autofillHints="Author"
             android:hint="@string/author"
-            android:inputType="text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editTextTitle"
+            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:textSize="16sp"/>
 
         <EditText
             android:id="@+id/editTextReturnDate"
@@ -57,9 +55,10 @@
             android:focusable="false"
             android:clickable="true"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editTextAuthor"
+            app:layout_constraintTop_toBottomOf="@id/textViewAuthor"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:textSize="16sp"/>
 
         <Button
             android:id="@+id/buttonSave"
