--- a/app/src/main/res/layout/activity_insert_book.xml
+++ b/app/src/main/res/layout/activity_insert_book.xml
@@ -54,7 +54,7 @@
             android:text="Today's date"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewAuthor"
-            app:layout_constraintEnd_toStartOf="@id/buttonSelectDate"
+            app:layout_constraintEnd_toEndOf="parent"
             android:padding="8dp"
             android:textSize="16sp" />
 
@@ -63,8 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/select_date"
-            app:layout_constraintStart_toEndOf="@id/textViewReturnDate"
-            app:layout_constraintTop_toBottomOf="@id/textViewAuthor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewReturnDate"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="8dp"
             android:textSize="16sp" />
